<resources>
    <string name="app_name">Image to Text</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IMAGE TO TEXT</string>
    <string name="nav_header_subtitle">OCR Text Scanner</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="libpic">Lib Picture</string>
    <string name="title_activity_images">Edit image</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="next_edit_image">Next</string>
    <string name="title_activity_text">Result Text</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_about">About</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_history">History</string>
    <string name="nav_whats_new">Release notes</string>
</resources>
