<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_whats_new"
            android:icon="@drawable/ic_action_whats_new"
            android:title="@string/nav_whats_new"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_action_history"
            android:title="@string/nav_history"/>

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_action_feedback"
            android:title="@string/nav_feedback"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_about"
            android:title="@string/nav_about"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_action_exit"
            android:title="@string/nav_exit" />
    </group>
</menu>

